--- a/13-HTML&CSS-Intro/inline-styles.html
+++ b/13-HTML&CSS-Intro/inline-styles.html
@@ -15,7 +15,7 @@
 
     <main>
       <div id="main">
-        <h1>CSS Basics: Inline Styles</h1>
+        <h1>Inline Styles</h1>
         <p style="color: red; font-weight: 700; font-size:smaller;">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
           esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
