--- a/14-CSS-Selectors/class-selector-3.html
+++ b/14-CSS-Selectors/class-selector-3.html
@@ -26,6 +26,8 @@
 
     <main>
       <div id="main">
+        <h1>Class Selector</h1>
+        <br><br>
         <div class="common-style">Element 1</div>
         <p class="common-style">Element 2</p>
         <p>Element 3</p>
