--- a/14-CSS-Selectors/percentage-width.html
+++ b/14-CSS-Selectors/percentage-width.html
@@ -30,6 +30,7 @@
 
     <main>
       <div id="main">
+        <h1>Percentage Width</h1>
         <div class="percentage-width">Resize the window to see me change!</div>
       </div>
     </main>
