--- a/14-CSS-Selectors/pixel-vs-percentage-width.html
+++ b/14-CSS-Selectors/pixel-vs-percentage-width.html
@@ -42,6 +42,7 @@
 
     <main>
       <div id="main">
+        <h1>Pixel vs Percentage Width</h1>
         <div class="fixed-width">I have a fixed width of 300px.</div>
         <div class="percentage-width">I have a width of 50%.</div>
       </div>
