--- a/14-CSS-Selectors/pixel-width.html
+++ b/14-CSS-Selectors/pixel-width.html
@@ -29,6 +29,7 @@
 
     <main>
       <div id="main">
+        <h1>Pixel Width</h1>
         <div class="fixed-width">I have a fixed width of 300px.</div>
       </div>
     </main>
