--- a/14-CSS-Selectors/type-selector-1.html
+++ b/14-CSS-Selectors/type-selector-1.html
@@ -21,6 +21,8 @@
 
     <main>
       <div id="main">
+        <h1>Type Selector</h1>
+        <br>
         <p>This is a paragraph.</p>
         <p>Style me with CSS!</p>
       </div>
