--- a/14-CSS-Selectors/type-selector-3.html
+++ b/14-CSS-Selectors/type-selector-3.html
@@ -7,11 +7,7 @@
     <title>Type Selector Exercise</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-      h1 {
-        color: green;
-      }
-
-      div {
+      div#red {
         color: red;
         font-weight: 900;
         font-size: x-large;
@@ -32,9 +28,11 @@
 
     <main>
       <div id="main">
-        <h1>Heading 1</h1>
+        <h1>Type Selector</h1>
+        <br>
+        <h1 style="color: green;">Heading 1</h1>
         <p>Paragraph text.</p>
-        <div>Div content.</div>
+        <div id="red">Div content.</div>
       </div>
     </main>
 
