--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2 id="section2">
           <a class="ex" href="#section2" onclick="toggleSection('section2'); return false;">CSS Selectors – Tasks</a>
         </h2>
-        <section>
+        <section class="active">
           <ol>
             <li>
               Type Selector
