--- a/13-HTML&CSS-Intro/block-elements.html
+++ b/13-HTML&CSS-Intro/block-elements.html
@@ -6,58 +6,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>10. Block Elements</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+      input[type="text"],
+      input[type="email"],
+      input[type="tel"],
+      input[type="password"] {
+        width: 95%;
+        padding: 10px;
+        margin-bottom: 20px;
+      }
+
+      button {
+        cursor: pointer;
+        text-align: center;
+        padding: 7px;
+        margin-top: 35px;
+        margin-bottom: 20px;
+        background-color: #203260;
+        color: rgb(242, 245, 250);
+        font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
+        font-size: 19px;
+        font-weight: 300;
+      }
+
+      button:hover {
+        color: rgb(65, 207, 253);
+      }
+    </style>
   </head>
 
   <body>
     <header>
       <h1 id="header"><a href="../index.html#section1" section.active>HTML & CSS – Exercises</a></h1>
     </header>
-
     <main>
       <div id="main">
         <h1>Block Elements</h1>
-        <nav>
-          <h3><a href="./forms.html">HTML Forms</a></h3>
-        </nav>
-        <br>
         <form action="#" method="POST">
           <div>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-          </div>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <div>
-            <label for="email">Email:&nbsp;</label>
-            <input type="email" id="email" name="email" required>
-          </div>
-          <br><br>
-          <div>
-            <label>Interests:</label>
-            <br><br>
             <div>
-              <input type="checkbox" id="interest1" name="interests" value="coding">
+              <label for="name">First Name:</label>
+              <input type="text" id="fname" value="Дамян" name="fname" required>
+            </div>
+            <div>
+              <label for="name">Last Name:</label>
+              <input type="text" id="lname" value="Василев" name="lname" required>
+            </div>
+            <div>
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" value="demian.vassilev@gmail.com" required>
+            </div>
+            <div>
+              <label for="phone">Phone:</label><br>
+              <input type="tel" id="phone" name="phone" value="0878 702770" required>
+            </div>
+            <div>
+              <label for="password">Password:</label><br>
+              <input type="password" id="password" name="password" value="123456" required>
+            </div>
+          </div>
+          <div>
+            <p>Interests:</p>
+            <div>
+              <input type="checkbox" checked id="interest1" name="interests" value="coding">
               <label for="interest1">Programming</label>
             </div>
-            &nbsp;&nbsp;
             <div>
-              <input type="checkbox" id="interest2" name="interests" value="security">
+              <input type="checkbox" checked id="interest2" name="interests" value="security">
               <label for="interest2">Cybersecurity</label>
             </div>
-            &nbsp;&nbsp;
             <div>
-              <input type="checkbox" id="interest3" name="interests" value="driving">
+              <input type="checkbox" checked id="interest3" name="interests" value="driving">
               <label for="interest3">Driving</label>
             </div>
-            &nbsp;&nbsp;
             <div>
-              <input type="checkbox" id="interest4" name="interests" value="music">
+              <input type="checkbox" checked id="interest4" name="interests" value="music">
               <label for="interest4">Music</label>
             </div>
-          </div>
-          <br><br><br>
-          <button type="submit">Submit</button>
+            <br>
+            <div>
+              <button type="submit">Submit</button>
+            </div>
         </form>
-        <br>
       </div>
     </main>
 
