--- a/13-HTML&CSS-Intro/internal-styles.html
+++ b/13-HTML&CSS-Intro/internal-styles.html
@@ -46,7 +46,7 @@
 
     <main>
       <div id="main">
-        <h1>CSS Basics: Internal Styles</h1>
+        <h1>Internal Styles</h1>
         <p id="paragraph-1">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
           esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
