--- a/14-CSS-Selectors/type-selector-2.html
+++ b/14-CSS-Selectors/type-selector-2.html
@@ -7,7 +7,6 @@
     <title>Type Selector Exercise</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-      h1,
       h2 {
         color: green;
       }
@@ -21,7 +20,9 @@
 
     <main>
       <div id="main">
-        <h1>This is a heading.</h1>
+        <h1>Type Selector</h1>
+        <br>
+        <h1 style="color: green;">This is a heading.</h1>
         <h2>This is a subheading.</h2>
       </div>
     </main>
