--- a/14-CSS-Selectors/pixel-vs-percentage-width.html
+++ b/14-CSS-Selectors/pixel-vs-percentage-width.html
@@ -41,8 +41,9 @@
     </header>
 
     <main>
+      <!-- <div class="content"> -->
       <div id="main">
-        <h1>Pixel vs Percentage Width</h1>
+        <h1>Pixel vs Percentage</h1>
         <div class="fixed-width">I have a fixed width of 300px.</div>
         <div class="percentage-width">I have a width of 50%.</div>
       </div>
