--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <button onclick="showSection('section1'); return false;">HTML & CSS Intro</button>
           &nbsp;&nbsp;&nbsp;
           <button onclick="showSection('section2'); return false;">CSS Selectors</button>
+          &nbsp;&nbsp;&nbsp;
+          <button onclick="showSection('section3'); return false;">Media Queries</button>
         </nav>
         <h2 id="section1">
           <a class="ex" href="#section1" onclick="toggleSection('section1'); return false;">HTML & CSS Intro – Tasks</a>
@@ -118,6 +120,20 @@
             </li>
             <li>
               <p><a class="ex" href="14-CSS-Selectors/pixel-vs-percentage-width.html">Pixel vs Percentage Width</a></p>
+            </li>
+          </ol>
+        </section>
+        <h2 id="section3">
+          <a class="ex" href="#section3" onclick="toggleSection('section3'); return false;">Media Queries – Tasks</a>
+        </h2>
+        <section class="active">
+          <ol>
+            <li>
+              <p><a class="ex" href="17-Media-Queries/responsive-design.html">Responsive Design</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="17-Media-Queries/advanced-responsive-design.html">Advanced Responsive Design</a>
+              </p>
             </li>
           </ol>
         </section>
