--- a/index.html
+++ b/index.html
@@ -121,6 +121,24 @@
             <li>
               <p><a class="ex" href="14-CSS-Selectors/pixel-vs-percentage-width.html">Pixel vs Percentage Width</a></p>
             </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/em-units.html">EM Units</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/rem-units.html">REM Units</a></p>
+            </li>
+            <li>
+              Specificity
+              <ul>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/specificity-1.html">Class selector style is applied</a></p>
+                </li>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/specificity-2.html">ID selector style takes precedence</a></p>
+                </li>
+              </ul>
+            </li>
+
           </ol>
         </section>
         <h2 id="section3">
