--- a/14-CSS-Selectors/em-units.html
+++ b/14-CSS-Selectors/em-units.html
@@ -4,33 +4,26 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixel vs Percentage Width Exercise</title>
+    <title>EM Units Exercise</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-      .fixed-width {
+      .parent {
         margin-top: 70px;
-        margin-bottom: 70px;
         border: 1px solid red;
         background-color: darkturquoise;
-        padding: 10px;
-        text-align: left;
-        font-size: 24px;
-        color: white;
-        width: 300px;
-        /* Set width to 300px */
+        padding: 20px;
+        font-size: 20px;
+        /* Set font-size to 20px */
       }
 
-      .percentage-width {
-        margin-top: 70px;
-        margin-bottom: 70px;
+      .child {
         border: 2px solid red;
         background-color: darkcyan;
         padding: 10px;
-        text-align: left;
-        font-size: 24px;
+        text-align: center;
         color: white;
-        width: 50%;
-        /* Set width to 50% */
+        font-size: 1.5em;
+        /* Set font-size to 1.5em */
       }
     </style>
   </head>
@@ -43,9 +36,10 @@
     <main>
       <!-- <div class="content"> -->
       <div id="main">
-        <h1>Pixel vs Percentage</h1>
-        <div class="fixed-width">I have a fixed width of 300px.</div>
-        <div class="percentage-width">I have a width of 50%.</div>
+        <h1>EM Units</h1>
+        <div class="parent">
+          <div class="child">I am 1.5em of my parent.</div>
+        </div>
       </div>
     </main>
 
