--- a/14-CSS-Selectors/rem-units.html
+++ b/14-CSS-Selectors/rem-units.html
@@ -4,33 +4,23 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixel vs Percentage Width Exercise</title>
+    <title>REM Units Exercise</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-      .fixed-width {
+      html {
+        font-size: 20px;
+        /* Set font-size to 20px */
+      }
+
+      .rem-size {
         margin-top: 70px;
-        margin-bottom: 70px;
         border: 1px solid red;
         background-color: darkturquoise;
         padding: 10px;
-        text-align: left;
-        font-size: 24px;
+        text-align: center;
         color: white;
-        width: 300px;
-        /* Set width to 300px */
-      }
-
-      .percentage-width {
-        margin-top: 70px;
-        margin-bottom: 70px;
-        border: 2px solid red;
-        background-color: darkcyan;
-        padding: 10px;
-        text-align: left;
-        font-size: 24px;
-        color: white;
-        width: 50%;
-        /* Set width to 50% */
+        font-size: 2rem;
+        /* Set font-size to 2rem */
       }
     </style>
   </head>
@@ -43,9 +33,8 @@
     <main>
       <!-- <div class="content"> -->
       <div id="main">
-        <h1>Pixel vs Percentage</h1>
-        <div class="fixed-width">I have a fixed width of 300px.</div>
-        <div class="percentage-width">I have a width of 50%.</div>
+        <h1>REM Units</h1>
+        <div class="rem-size">I am 2rem.</div>
       </div>
     </main>
 
