--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                 </li>
               </ul>
             </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/id-selector.html">ID Selector</a></p>
+            </li>
 
           </ol>
         </section>
