--- a/14-CSS-Selectors/specificity-1.html
+++ b/14-CSS-Selectors/specificity-1.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="styles.css">
     <style>
       p {
+        color: blue;
+        font-weight: 700;
         font-style: italic;
         font-size: 16px;
-        font-weight: 400;
-        color: blue;
         /* Style for type selector */
       }
 
       .highlight {
-        font-style: bold;
-        font-size: 24px;
-        font-weight: 700;
         color: red;
+        font-weight: 900;
+        font-style: normal;
+        font-size: 24px;
         /* Style for class selector */
       }
     </style>
