--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div id="main">
         <nav>
           <button onclick="showSection('section1'); return false;">HTML & CSS Intro</button>
-          &nbsp;&nbsp;&nbsp;
+          &nbsp;
           <button onclick="showSection('section2'); return false;">CSS Selectors</button>
-          &nbsp;&nbsp;&nbsp;
+          &nbsp;
           <button onclick="showSection('section3'); return false;">Media Queries</button>
         </nav>
         <h2 id="section1">
