--- a/17-Media-Queries/advanced-responsive-design.html
+++ b/17-Media-Queries/advanced-responsive-design.html
@@ -13,10 +13,10 @@
       }
 
       nav a {
-        color: white;
         text-decoration: none;
         text-align: center;
         padding: 19px;
+        color: white;
       }
 
       .container {
@@ -65,6 +65,7 @@
           /* top: 0; */
           /* bottom: 0; */
           min-height: 88vh;
+          max-height: 88vh;
         }
 
         .container {
