--- a/17-Media-Queries/advanced-responsive-design.html
+++ b/17-Media-Queries/advanced-responsive-design.html
@@ -14,7 +14,7 @@
 
       nav a {
         text-decoration: none;
-        text-align: center;
+        /* text-align: center; */
         padding: 19px;
         color: white;
       }
@@ -64,8 +64,7 @@
           grid-auto-rows: 70px;
           /* top: 0; */
           /* bottom: 0; */
-          min-height: 88vh;
-          max-height: 88vh;
+          min-height: 100vh;
         }
 
         .container {
