--- a/17-Media-Queries/advanced-responsive-design.html
+++ b/17-Media-Queries/advanced-responsive-design.html
@@ -14,8 +14,8 @@
 
       nav a {
         text-decoration: none;
-        /* text-align: center; */
-        padding: 19px;
+        text-align: center;
+        padding-top: 75px;
         color: white;
       }
 
@@ -42,7 +42,7 @@
 
         nav a {
           display: inline-block;
-          padding: 10px 20px;
+          padding: 10px 50px;
         }
 
         .container {
@@ -62,9 +62,9 @@
           grid-template-columns: repeat(2, 100px);
           position: fixed;
           grid-auto-rows: 70px;
-          /* top: 0; */
-          /* bottom: 0; */
-          min-height: 100vh;
+          top: 0;
+          bottom: 0;
+          z-index: 500;
         }
 
         .container {
@@ -78,8 +78,7 @@
         }
       }
 
-      /* 
-      @media (min-width: 600px) and (max-width: 899px) {
+      /* @media (min-width: 600px) and (max-width: 899px) {
         nav {
           display: none;
         }
