--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
               Type Selector
               <ul>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/type-selector-1.html">Style all paragraph elements</a></p>
+                  <p><a class="ex" href="14-CSS-Selectors/type-selector-1.html">to style all paragraph elements</a></p>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/type-selector-2.html">Style all heading elements</a></p>
+                  <p><a class="ex" href="14-CSS-Selectors/type-selector-2.html">to style all heading elements</a></p>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/type-selector-3.html">Style different HTML elements</a></p>
+                  <p><a class="ex" href="14-CSS-Selectors/type-selector-3.html">to style different HTML elements</a></p>
                 </li>
               </ul>
             </li>
@@ -92,19 +92,20 @@
               Class Selector
               <ul>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/class-selector-1.html">Change the color of text inside
+                  <p><a class="ex" href="14-CSS-Selectors/class-selector-1.html">to change the color of text inside
                       elements</a></p>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/class-selector-2.html">Change the background color of
+                  <p><a class="ex" href="14-CSS-Selectors/class-selector-2.html">to change the background color of
                       elements</a></p>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/class-selector-3.html">Common style to multiple elements</a>
+                  <p><a class="ex" href="14-CSS-Selectors/class-selector-3.html">to apply a common style to multiple
+                      elements</a>
                   </p>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/class-selector-4.html">Change the background color of
+                  <p><a class="ex" href="14-CSS-Selectors/class-selector-4.html">to change the background color of
                       elements</a></p>
                 </li>
               </ul>
@@ -140,6 +141,32 @@
             </li>
             <li>
               <p><a class="ex" href="14-CSS-Selectors/id-selector.html">ID Selector</a></p>
+            </li>
+            <li>
+              Attribute Selector
+              <ul>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/attribute-selector-1.html">to style input elements</a></p>
+                </li>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/attribute-selector-2.html">to change the text color of
+                      links</a></p>
+                </li>
+              </ul>
+            </li>
+            <li>
+              Universal Selector
+              <ul>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/universal-selector-1.html">to set a default margin and
+                      padding</a></p>
+                </li>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/universal-selector-2.html">to set a default font-family and
+                      color
+                    </a></p>
+                </li>
+              </ul>
             </li>
 
           </ol>
