--- a/14-CSS-Selectors/specificity-1.html
+++ b/14-CSS-Selectors/specificity-1.html
@@ -10,7 +10,7 @@
       p {
         color: blue;
         font-weight: 700;
-        /* font-style: italic; */
+        font-style: italic;
         font-size: 16px;
         /* Style for type selector */
       }
