--- a/index.html
+++ b/index.html
@@ -168,7 +168,53 @@
                 </li>
               </ul>
             </li>
-
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/descendant-combinator.html">Descendant Combinator</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/combinator-comparison.html">Combinator Comparison</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/selector-list.html">Selector List</a></p>
+            </li>
+            <li>
+              Child Combinator
+              <ul>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/child-combinator-1.html">to style direct children of a div
+                      element</a></p>
+                </li>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/child-combinator-2.html">to style direct children of a
+                      specific class</a></p>
+                </li>
+              </ul>
+            </li>
+            <li>
+              Box Model
+              <ul>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/box-model-1.html">by setting margin, border, padding, and
+                      content area</a></p>
+                </li>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/box-model-2.html">the total width with padding,
+                      border, and margin</a></p>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/display-property.html">Display Property</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/width-properties.html">Width Properties</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/height-properties.html">Height Properties</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/margin-border-padding.html">Margin, Border, Padding</a></p>
+            </li>
           </ol>
         </section>
         <h2 id="section3">
