--- a/14-CSS-Selectors/box-model-1.html
+++ b/14-CSS-Selectors/box-model-1.html
@@ -4,16 +4,19 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universal Selector Exercise</title>
+    <title>Box Model Exercise</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-      /* div#main * { */
-      * {
-        font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
-        font-style: italic;
-        font-weight: 300;
-        font-size: 16px;
-        color: green;
+      .box {
+        margin: 1% 0;
+        border: thick double red;
+        padding: 25px 0 0 50px;
+        width: 90%;
+        height: 25vh;
+        background-color: darkturquoise;
+        text-align: left;
+        font-size: 30px;
+        color: white;
       }
     </style>
   </head>
@@ -25,8 +28,8 @@
 
     <main>
       <div id="main">
-        <h1>Universal Selector</h1>
-        <div>Content with default font and color.</div>
+        <h1>Box Model</h1>
+        <div class="box">Box Model Example</div>
       </div>
     </main>
 
