--- a/14-CSS-Selectors/box-model-2.html
+++ b/14-CSS-Selectors/box-model-2.html
@@ -4,16 +4,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universal Selector Exercise</title>
+    <title>Box Model Exercise</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-      /* div#main * { */
-      * {
-        font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
-        font-style: italic;
-        font-weight: 300;
-        font-size: 16px;
-        color: green;
+      .box {
+        width: 200px;
+        padding: 20px;
+        border: 5px solid black;
+        margin: 10px;
+        /* Calculate my total width (200 + (2 * 20) + (2 * 5) + (2 * 10) = 270px) */
       }
     </style>
   </head>
@@ -25,8 +24,8 @@
 
     <main>
       <div id="main">
-        <h1>Universal Selector</h1>
-        <div>Content with default font and color.</div>
+        <h1>Box Model</h1>
+        <div class="box">My total width = 270px<br>200 + 2 * 20 + 2 * 5 + 2 * 10</div>
       </div>
     </main>
 
