--- a/14-CSS-Selectors/descendant-combinator.html
+++ b/14-CSS-Selectors/descendant-combinator.html
@@ -4,16 +4,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universal Selector Exercise</title>
+    <title>Descendant Combinator Exercise</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-      /* div#main * { */
-      * {
-        font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
+      div p {
+        color: blue;
+        font-weight: 700;
         font-style: italic;
-        font-weight: 300;
-        font-size: 16px;
-        color: green;
+        font-size: 20px;
       }
     </style>
   </head>
@@ -25,9 +23,10 @@
 
     <main>
       <div id="main">
-        <h1>Universal Selector</h1>
-        <div>Content with default font and color.</div>
-      </div>
+        <h1>Descendant Combinator</h1>
+        <div>
+          <p>Descendant of div</p>
+        </div>
     </main>
 
     <footer>
