--- a/14-CSS-Selectors/height-properties.html
+++ b/14-CSS-Selectors/height-properties.html
@@ -4,16 +4,21 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universal Selector Exercise</title>
+    <title>Height Properties Exercise</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-      /* div#main * { */
-      * {
-        font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
-        font-style: italic;
-        font-weight: 300;
-        font-size: 16px;
-        color: green;
+      .height-example {
+        margin: 1% 0;
+        border: thick double red;
+        padding: 25px;
+        width: 70vw;
+        height: 25vh;
+        min-height: 10px;
+        max-height: 700px;
+        background-color: darkturquoise;
+        text-align: left;
+        font-size: 24px;
+        color: white;
       }
     </style>
   </head>
@@ -25,8 +30,8 @@
 
     <main>
       <div id="main">
-        <h1>Universal Selector</h1>
-        <div>Content with default font and color.</div>
+        <h1>Height Properties</h1>
+        <div class="height-example">Resize the window to see me change!</div>
       </div>
     </main>
 
