--- a/index.html
+++ b/index.html
@@ -66,6 +66,35 @@
             <li>
               <p><a class="ex" href="13-HTML&CSS-Intro/external-styles.html">CSS Basics: External Styles</a></p>
             </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/class-selector.html">CSS Selectors: Class Selector</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/id-selector.html">CSS Selectors: ID Selector</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/universal-selector.html">CSS Selectors: Universal Selector</a>
+              </p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/grouping-selector.html">CSS Selectors: Grouping Selector</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/font-family.html">CSS Typography: Font Family</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/font-size.html">CSS Typography: Font Size</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/font-style-weight.html">CSS Typography: Font Style and
+                  Weight</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/text-alignment.html">CSS Typography: Text Alignment</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/line-height.html">CSS Typography: Line Height</p></a>
+            </li>
           </ol>
         </section>
 
