--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
             <li>
               <p><a class="ex" href="13-HTML&CSS-Intro/line-height.html">CSS Typography: Line Height</p></a>
             </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/background-color.html">CSS Colors: Background Color</p></a>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/text-color.html">CSS Colors: Text Color</p></a>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/border-color.html">CSS Colors: Border Color</p></a>
+            </li>
+
           </ol>
         </section>
 
