--- a/13-HTML&CSS-Intro/font-size.html
+++ b/13-HTML&CSS-Intro/font-size.html
@@ -18,64 +18,64 @@
       <div id="main">
         <h1>Font Size</h1>
         <p class="jetbrainsmono xx-small">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; xx-small (9px)
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;xx-small (9px)
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono x-small">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; x-small (10px)
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;x-small (10px)
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-12">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; (12px)
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(12px)
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono small">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; small (13px)
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;small (13px)
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-14">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; (14px)
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(14px)
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-15">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; (15px)
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(15px)
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono medium">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; medium (16px)
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;medium (16px)
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono large">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; large (18px)
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;large (18px)
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono larger">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; larger (19px)
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;larger (19px)
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono x-large">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; x-large (24px)
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> &nbsp;x-large (24px)
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
       </div>
     </main>
