--- a/13-HTML&CSS-Intro/font-style-weight.html
+++ b/13-HTML&CSS-Intro/font-style-weight.html
@@ -18,82 +18,72 @@
       <div id="main">
         <h1>Font Style and Weight</h1>
         <p class="jetbrainsmono xx-small weight-100">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; xx-small (9px) 100
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;xx-small
+              (9px) 100 <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono x-small weight-lighter initial">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; x-small (10px) lighter
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;x-small
+              (10px) lighter <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-11 weight-200 inherit">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; (11px) 200
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(11px) 200
+              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-12 weight-300">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; (12px) 300
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(12px) 300
+              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono small weight-light">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; small (13px) light
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp; small (13px)
+              light <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-14 weight-light">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; (14px) light
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(14px) light
+              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-14 weight-normal">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; (14px) normal
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(14px) normal
+              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-15 weight-500">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; (15px) 500
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(15px) 500
+              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-15 weight-600">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; (15px) 600
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(15px) 600
+              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono medium weight-bold">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; medium (16px) bold
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> |> &nbsp;medium (16px) bold <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono large weight-700">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; large (18px) 700
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> |> &nbsp;large (18px) 700 <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono larger weight-800 italic">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; larger (19px) 800 italic
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> |> &nbsp;larger (19px) 800 italic <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono x-large weight-900 oblique">
-          0123456789&nbsp; &nbsp; !==&nbsp; !=&nbsp; => &nbsp; x-large (24px) 900 oblique
-          <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= => &nbsp;x-large (24px) 900 oblique <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
       </div>
     </main>
